# coding-agent-memory-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  FAILURES.md  LICENSE  README.md  REVIEW.md  STATE.md  install.ps1  install.sh  pyproject.toml
.github/skills/repo-memory/: .env.template  SKILL.md  agent-instructions.md  requirements.txt  setup.sh  skill.json
.github/skills/repo-memory-skill/: SKILL.md  skill.json
.github/skills/repo-memory/scripts/: memory_cli.py  memory_init.py  memory_sync.py  test_session_sync.py
.github/skills/repo-memory/scripts/session_sync/: __init__.py  base.py  claude_code.py  codex.py  copilot.py  cursor.py  openclaw.py  store.py
.github/skills/repo-memory/templates/: AGENTS.md  CHANGELOG.md  DECISIONS.md  FAILURES.md  STATE.md
docs/: architecture.md  extending.md  quickstart.md  session-sync-architecture.md
repo_memory/: __init__.py  artifact_updater.py  cosmos_sync.py  long_term_memory.py  models.py  session_store.py  transcript_adapter.py
tests/: test_artifact_updater.py  test_cosmos_sync.py  test_long_term_memory.py  test_models.py  test_session_store.py  test_transcript_adapter.py
