[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-agent-memory-kit"
version = "0.1.0"
description = "Cross-agent memory-as-artifact system with repo markdown and Cosmos DB session memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Theo van Kraay"},
]
dependencies = [
    "pydantic>=2.0",
    "agent-memory-toolkit",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
