[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "coding-agent-memory-kit"
version = "3.0.0"
description = "Drop-in GitHub Skill giving any coding agent persistent memory via AgentMemoryToolkit + Cosmos DB"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "agent-memory-toolkit @ git+https://github.com/TheovanKraay/AgentMemoryToolkit.git",
    "azure-identity>=1.17",
]
